--- a/Billing.Application/Billing.Application.csproj
+++ b/Billing.Application/Billing.Application.csproj
@@ -11,12 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="MassTransit" Version="8.2.5" />
       <PackageReference Include="MediatR" Version="12.4.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Dtos\" />
     </ItemGroup>
 
 </Project>
