--- a/Orders.BackgroundJobs/Orders.BackgroundJobs.csproj
+++ b/Orders.BackgroundJobs/Orders.BackgroundJobs.csproj
@@ -1,17 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Orders.Appliaction\Orders.Appliaction.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="MediatR" Version="12.4.1" />
     </ItemGroup>
 
 </Project>
