--- a/Orders.Infrastructure/Orders.Infrastructure.csproj
+++ b/Orders.Infrastructure/Orders.Infrastructure.csproj
@@ -7,4 +7,13 @@
         <RootNamespace>Order.Infrastructure</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.4.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Orders.Application\Orders.Application.csproj" />
+    </ItemGroup>
+
 </Project>
