--- a/Shipments.BackgroundJobs/Shipments.BackgroundJobs.csproj
+++ b/Shipments.BackgroundJobs/Shipments.BackgroundJobs.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj" />
       <ProjectReference Include="..\Shipments.Application\Shipments.Application.csproj" />
       <ProjectReference Include="..\Shipments.Infrastructure\Shipments.Infrastructure.csproj" />
       <ProjectReference Include="..\Shipments.Persistence\Shipments.Persistence.csproj" />
