--- a/Billing.Api/appsettings.json
+++ b/Billing.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localHost;Port=5432;Database=Bill;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
