--- a/Orders.Api/appsettings.json
+++ b/Orders.Api/appsettings.json
@@ -1,4 +1,6 @@
-{
+{"ConnectionStrings": {
+  "DefaultConnection": "Host=localHost;Port=5432;Database=Orders;Username=postgres;Password=postgres"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
