Final version + README.MD + working containers

--- a/Catalog.Api/appsettings.json
+++ b/Catalog.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localHost;Port=5432;Database=Catalog;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localHost;Port=5432;Database=Catalog;Username=postgres;Password=postgres",
   },
   "Logging": {
     "LogLevel": {
