--- a/Orders.BackgroundJobs/appsettings.json
+++ b/Orders.BackgroundJobs/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localHost;Port=5432;Database=Orders;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localHost;Port=5432;Database=Orders;Username=postgres;Password=postgres",
+    "RabbitHost": "localhost",
+    "RabbitPort": "5672"
   },
   "Logging": {
     "LogLevel": {
