--- a/Billing.Infrastructure/Billing.Infrastructure.csproj
+++ b/Billing.Infrastructure/Billing.Infrastructure.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <PackageReference Include="MassTransit" Version="8.2.5" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
+      <PackageReference Include="Telegram.Bot" Version="21.11.0" />
     </ItemGroup>
 
 </Project>
