--- a/Orders.Api/appsettings.json
+++ b/Orders.Api/appsettings.json
@@ -1,5 +1,7 @@
 {"ConnectionStrings": {
-  "DefaultConnection": "Host=localHost;Port=5432;Database=Orders;Username=postgres;Password=postgres"
+  "DefaultConnection": "Host=localHost;Port=5432;Database=Orders;Username=postgres;Password=postgres",
+  "RabbitHost": "localhost",
+  "RabbitPort": "5672"
 },
   "Logging": {
     "LogLevel": {
