--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -28,6 +28,7 @@ services:
       - rabbit
     environment:
     - "DbConnectionString=Host=postgres.db;Port=5432;Database=Bill;Username=postgres;Password=postgres"
+    - "ConnectionStrings__RabbitHost=rabbit"
     - "ASPNETCORE_HTTP_PORTS=80"
 
   catalog.api:
@@ -49,6 +50,7 @@ services:
       - rabbit
     environment:
       - "DbConnectionString=Host=postgres.db;Port=5432;Database=Bill;Username=postgres;Password=postgres"
+      - "ConnectionStrings__RabbitHost=rabbit"
       - "ASPNETCORE_HTTP_PORTS=80"
   
   orders.api:
@@ -60,6 +62,7 @@ services:
       - rabbit
     environment:
       - "DbConnectionString=Host=postgres.db;Port=5432;Database=Orders;Username=postgres;Password=postgres"
+      - "ConnectionStrings__RabbitHost=rabbit"
       - "ASPNETCORE_HTTP_PORTS=80"
 
   orders.backgroundjobs:
@@ -71,6 +74,7 @@ services:
       - rabbit
     environment:
       - "DbConnectionString=Host=postgres.db;Port=5432;Database=Orders;Username=postgres;Password=postgres"
+      - "ConnectionStrings__RabbitHost=rabbit"
       - "ASPNETCORE_HTTP_PORTS=80"
 
   shipments.backgroundjobs:
@@ -82,7 +86,18 @@ services:
       - rabbit
     environment:
       - "DbConnectionString=Host=postgres.db;Port=5432;Database=Shipments;Username=postgres;Password=postgres"
+      - "ConnectionStrings__RabbitHost=rabbit"
       - "ASPNETCORE_HTTP_PORTS=80"
 
- 
+  users.api:
+    image: 'users.api:latest'
+    ports:
+      - '5115:80'
+    depends_on: 
+      - postgres.db
+      - rabbit
+    environment:
+      - "DbConnectionString=Host=postgres.db;Port=5432;Database=Users;Username=postgres;Password=postgres"
+      - "ConnectionStrings__RabbitHost=rabbit"
+      - "ASPNETCORE_HTTP_PORTS=80"
 
